<resources>
    <string name="app_name">NoteApp</string>
    <string name="title_hint">Title</string>
    <string name="body_hint">Body</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_note">Add note</string>
    <string name="title_required">Title is required</string>
    <string name="no_notes">No notes yet. Tap + to create one.</string>
    <string name="welcome_title">Welcome to Note App</string>
    <string name="welcome_hint">Please touch the screen to start</string>
    <string name="menu_title">Main Menu</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_notes_desc">Create and manage your notes</string>
    <string name="menu_drawing">Drawing</string>
    <string name="menu_drawing_desc">Sketch and draw freely</string>
    <string name="drawing_title">Drawing</string>
    <string name="drawing_color">Color:</string>
    <string name="drawing_clear">Clear</string>
    <string name="drawing_save">Save</string>
    <string name="color_black">Black</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_white">White</string>
</resources>

